[gd_scene load_steps=10 format=3 uid="uid://kq88ibk3s4dp"]

[ext_resource type="Texture2D" uid="uid://grrsepyreyfg" path="res://raw/scvm.png" id="1_bn5f6"]
[ext_resource type="Script" path="res://CharCreateScreen/char_create_screen.gd" id="1_lc5yd"]
[ext_resource type="FontFile" uid="uid://c6b8v1ithd13e" path="res://fonts/OldNewspaperTypes.ttf" id="1_ryp1u"]
[ext_resource type="PackedScene" uid="uid://c334w8qxwf06s" path="res://demo.tscn" id="2_txbnt"]
[ext_resource type="PackedScene" uid="uid://bw1l72igkmie6" path="res://ZoneLoadOverlay/zone_load_overlay.tscn" id="4_wbaa6"]

[sub_resource type="Theme" id="Theme_73yai"]
default_font = ExtResource("1_ryp1u")
default_font_size = 50

[sub_resource type="Theme" id="Theme_83vvq"]
default_font = ExtResource("1_ryp1u")
default_font_size = 85

[sub_resource type="LabelSettings" id="LabelSettings_2drqb"]
font = ExtResource("1_ryp1u")
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_fk5vp"]
font = ExtResource("1_ryp1u")
font_size = 24

[node name="CharCreateScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lc5yd")
nextScene = ExtResource("2_txbnt")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_bn5f6")
expand_mode = 3

[node name="Reroll" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -194.0
offset_top = -191.0
offset_right = -35.0
offset_bottom = -121.0
grow_horizontal = 0
grow_vertical = 0
rotation = -0.156389
theme = SubResource("Theme_73yai")
action_mode = 0
text = "Reroll"
flat = true
metadata/_edit_use_anchors_ = true

[node name="Run" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -189.0
offset_top = -140.0
offset_right = -8.99976
offset_bottom = -26.9999
grow_horizontal = 0
grow_vertical = 0
rotation = 0.128397
theme = SubResource("Theme_83vvq")
action_mode = 0
text = "Run"
flat = true

[node name="LabelsLeft" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NameLabel" type="Label" parent="LabelsLeft"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 181.0
offset_top = 5.0
offset_right = 281.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.101622
text = "Name"
label_settings = SubResource("LabelSettings_2drqb")

[node name="Name" type="Label" parent="LabelsLeft"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 235.0
offset_top = 44.0
offset_right = 597.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.0576483
text = "Testname"
label_settings = SubResource("LabelSettings_fk5vp")

[node name="ClassLabel" type="Label" parent="LabelsLeft"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 184.0
offset_top = 79.0
offset_right = 284.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.0275385
text = "Class"
label_settings = SubResource("LabelSettings_2drqb")

[node name="Class" type="Label" parent="LabelsLeft"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 211.0
offset_top = 138.0
offset_right = 564.0
offset_bottom = 171.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.0622452
text = "Test Class
"
label_settings = SubResource("LabelSettings_fk5vp")

[node name="StatsLabel" type="Label" parent="LabelsLeft"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 27.0
offset_top = 200.0
offset_right = 127.0
offset_bottom = 249.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.410548
text = "Stats"
label_settings = SubResource("LabelSettings_2drqb")

[node name="HP" type="Label" parent="LabelsLeft"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 122.0
offset_top = 254.0
offset_right = 202.0
offset_bottom = 287.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.0224583
text = "HP: 5
"
label_settings = SubResource("LabelSettings_fk5vp")

[node name="Strength" type="Label" parent="LabelsLeft"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 85.0
offset_top = 298.0
offset_right = 213.0
offset_bottom = 331.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.0529585
text = "Strength: 5
"
label_settings = SubResource("LabelSettings_fk5vp")

[node name="Agility" type="Label" parent="LabelsLeft"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 122.0
offset_top = 342.0
offset_right = 250.0
offset_bottom = 375.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.0810017
text = "Agility: 5
"
label_settings = SubResource("LabelSettings_fk5vp")

[node name="Toughness" type="Label" parent="LabelsLeft"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 97.0
offset_top = 370.0
offset_right = 243.0
offset_bottom = 403.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.0555333
text = "Toughness: 5
"
label_settings = SubResource("LabelSettings_fk5vp")

[node name="ZoneLoadOverlay" parent="." instance=ExtResource("4_wbaa6")]
layout_mode = 1
zoneName = "Crawler"

[connection signal="pressed" from="Reroll" to="." method="_on_reroll_pressed"]
[connection signal="pressed" from="Run" to="." method="_on_run_pressed"]
